[package]
name = "librstb"
version = "0.1.1"
authors = ["Benjamin Blase"]
edition = "2021"
description = "Write HDL-Testbenches in Rust."
readme = "README.md"
repository = "https://github.com/benbr8/rstb"
license = "GPL-3.0"
keywords = ["eda", "verilog", "vhdl"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
once_cell = "1.13.0"
lazy_static = "1.4.0"
fasthash = "0.4.0"
futures-channel = "0.3.21"
intmap = "2.0.0"
queues = "1.1.0"
lazy_mut = "0.1.0"
num-format = "0.4.0"
rand = "0.8.5"
junit-report = "0.7.1"
prettytable-rs = "0.8.0"

[features]
default = ["vpi"]
vpi = []
vhpi = []