[package]
name = "rstb_fifo"
version = "0.1.0"
authors = ["benbr8"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# rstb = {git = "https://github.com/benbr8/rstb.git", branch = "main"}
rstb = {path = "../.."}

[profile.release]
opt-level = 3