[package]
name = "rstb_test"
version = "0.1.0"
authors = ["benbr8"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# rstb = {git = "https://github.com/benbr8/rstb.git", branch = "main"}
rstb = {path = "../.."}
futures = "*"
lazy_mut = "*"

[profile.release]
opt-level = 3